@@ -76,5 +76,5 @@ trustme = Pod::Usage => qr/^start_document$/
 
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
-spell_cmd = aspell list
+spell_cmd = hunspell -l
 stopword = CPAN
